# ci-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json
.github/workflows/: ci.yml  manual.yml
cmake/: clang.cmake
src/: main.cpp
